--- a/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
+++ b/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
@@ -65,7 +65,7 @@ Class<?> clazz = cc.toClass();
 
 `toClass()`方法请求当前线程的上下文类加载器来加载由`CtClass`表示的类文件（具体可以跟下源码）。它返回一个表示被加载的类的`java.lang.Class`对象。有关更多详细信息，请查看下面的章节。
 
-#### 定义一个新的类
+#### 定义一个新的类`makeClass()`
 
 要从零开始定义一个新的类，必须对`ClassPool`对象调用`makeClass()`方法。
 
@@ -74,4 +74,41 @@ Class<?> clazz = cc.toClass();
         CtClass cc = pool.makeClass("Point");
 ```
 
-这个程序定义了一个没有成员的`Point`类，
+这个程序定义了一个没有成员的`Point`类。`Point`的成员方法可以通过`CtNewMethod`类中声明的工厂方法创建，并通过`CtClass`类的`addMethod`方法添加到`Point`类里面。
+
+`makeClass()`方法不能创建一个新的接口；`ClassPool`类中的`makeInterface()`方法可以创建一个新的接口。一个接口的成员方法可以用`CtNewMethod`类中的`abstractMethod()`方法创建。注意接口的方法是抽象方法。
+
+#### 冻结类
+
+如果一个`CtClass`对象通过`writeFile()`、`toClass()`、`toBytecode()`转换为类文件后，`Javassist`会冻结该`CtClass`对象。不允许进一步修改该`CtClass`对象。这是为了警告开发人员，当他们试图修改已经加载的类文件时，因为`JVM`不允许类。
+
+一个冻结的`CtClass`可以被解冻，以便类定义可以被修改。例如，
+
+```java
+        CtClass cc = ...
+        	:
+        cc.writeFile();
+        cc.defrost();
+        cc.setSuperclass(...); // Ok since the class is not frozen
+```
+
+在`defrost()`方法被调用之后，`CtClass`对象就又可以修改了。
+
+如果`ClassPool.doPruning`被置为`true`，那么当`Javassist`冻结`CtClass`对象时将精简该对象中包含的数据结构。为了减少内存开销，精简会丢弃对象中不必要的属性（`attribute_info`结构）。例如，代码属性结构（方法体）将被丢弃。因此，在`CtClass`对象被精简后，一个方法的字节码是不可访问的，方法名、签名、注解除外。已精简的`CtClass`对象无法再次解冻。`ClassPool.doPruning`的默认值是`false`。
+
+要禁止精简指定的`CtClass`对象，必须提前调用该对象的`stopPruning()`方法。
+
+```java
+        CtClass cc = ...
+        cc.stopPruning(true);
+			:
+        cc.writeFile(); // convert to a class file
+        // cc is not pruned
+```
+
+`CtClass`对象`cc`未被修剪。因此，可以在调用`writeFile()`之后对其进行解冻。
+
+注意：在调试时，您可能希望暂时停止修剪和冻结，并将修改后的类文件写入磁盘。`debugWriteFile()`是一个方便的方法，它关闭精简，写入一个类文件，解冻，然后再次打开精简（如果最初是打开的）。
+
+#### 类搜索路径
+
