--- a/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
+++ b/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
@@ -112,3 +112,9 @@ Class<?> clazz = cc.toClass();
 
 #### 类搜索路径
 
+静态方法`ClassPool.getDefault()`返回的默认`ClassPool`对象，与底层的`JVM`有相同的搜索路径。如果程序在`JBoss`和`Tomcat`等`web`应用服务器上运行，那么`ClassPool`对象可能无法找到用户类，因为这样的`web`应用服务器使用多个类加载器和系统类加载器。在这种情况下，必须向`ClassPool`对象注册一个附加的类路径。下面的代码假设`pool`引用一个`ClassPool`对象：
+
+```java
+pool.insertClassPath(new ClassClassPath(this.getClass()));
+```
+
