--- a/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
+++ b/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
@@ -118,3 +118,4 @@ Class<?> clazz = cc.toClass();
 pool.insertClassPath(new ClassClassPath(this.getClass()));
 ```
 
+上面的代码注册一个`classpath`，这个`classpath`是`this`引用的对象所在的类的加载路径。你可以使用任意的`Class`类的对象作为参数，而不局限于`this.getClass()`。用于加载表示`Class`对象的类路径就注册好了。
