--- a/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
+++ b/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
@@ -119,3 +119,57 @@ pool.insertClassPath(new ClassClassPath(this.getClass()));
 ```
 
 上面的代码注册一个`classpath`，这个`classpath`是`this`引用的对象所在的类的加载路径。你可以使用任意的`Class`类的对象作为参数，而不局限于`this.getClass()`。用于加载表示`Class`对象的类路径就注册好了。
+
+你可以注册一个目录名作为类搜索路径。例如，以下代码将`/usr/local/javalib`添加到搜索路径：
+
+```java
+        ClassPool pool = ClassPool.getDefault();
+        try {
+            ClassPath classPath = pool.insertClassPath("/usr/local/javalib");
+        } catch (NotFoundException e) {
+            e.printStackTrace();
+        }
+```
+
+可以添加的类搜索路径不仅可以是一个目录，也可以是一个`URL`：
+
+```java
+        ClassPool pool = ClassPool.getDefault();
+        ClassPath cp = new URLClassPath("www.javassist.org", 80, "/java/", "org.javassist.");
+        pool.insertClassPath(cp);
+```
+
+上面这个程序添加了`http://www.javassist.org:80/java/`到类搜索路径。这个`URL`用来搜索属性于包`org.javassist.`中的类。例如，要加载一个`org.javassist.test.Main`的类，这个类文件将从以下位置获取：
+
+```java
+http://www.javassist.org:80/java/org/javassist/test/Main.class
+```
+
+此外，你还可以直接提供一个`byte`数组给`ClassPool`对象，并且通过这个`byte`数组构建一个`CtCLass`对象。使用`ByteArrayClassPath`可以做到，例如：
+
+```java
+        ClassPool cp = ClassPool.getDefault();
+        byte[] b = a byte array;
+        String name = class name;
+        cp.insertClassPath(new ByteArrayClassPath(name, b));
+        try {
+            CtClass ctClass = cp.get(name);
+        } catch (NotFoundException e) {
+            e.printStackTrace();
+        }
+```
+
+获得的`CtClass`对象表示由数组`b`指定的类文件定义的类。如果`ClassPool`的`get()`方法被调用了，并且传给`get()`方法的`name`参数为指定的类名，那么`ClassPool`对象将从给定的`ByteArrayClassPath`对象中读取类文件信息。
+
+如果你不知道类的完全限定名，则可以在`ClassPoll`对象上使用`makeClass()`方法：
+
+```java
+        ClassPool cp = ClassPool.getDefault();
+        InputStream ins = an input stream for reading a class file;
+        try {
+            CtClass ctClass = cp.makeClass(ins);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+```
+
