--- a/docs/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
+++ b/docs/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
@@ -65,7 +65,7 @@ Class<?> clazz = cc.toClass();
 
 `toClass()`方法请求当前线程的上下文类加载器来加载由`CtClass`表示的类文件（具体可以跟下源码）。它返回一个表示被加载的类的`java.lang.Class`对象。有关更多详细信息，请查看下面的章节。
 
-#### 定义一个新的类
+#### 定义一个新的类`makeClass()`
 
 要从零开始定义一个新的类，必须对`ClassPool`对象调用`makeClass()`方法。
 
@@ -74,4 +74,103 @@ Class<?> clazz = cc.toClass();
         CtClass cc = pool.makeClass("Point");
 ```
 
-这个程序定义了一个没有成员的`Point`类，
+这个程序定义了一个没有成员的`Point`类。`Point`的成员方法可以通过`CtNewMethod`类中声明的工厂方法创建，并通过`CtClass`类的`addMethod`方法添加到`Point`类里面。
+
+`makeClass()`方法不能创建一个新的接口；`ClassPool`类中的`makeInterface()`方法可以创建一个新的接口。一个接口的成员方法可以用`CtNewMethod`类中的`abstractMethod()`方法创建。注意接口的方法是抽象方法。
+
+#### 冻结类
+
+如果一个`CtClass`对象通过`writeFile()`、`toClass()`、`toBytecode()`转换为类文件后，`Javassist`会冻结该`CtClass`对象。不允许进一步修改该`CtClass`对象。这是为了警告开发人员，当他们试图修改已经加载的类文件时，因为`JVM`不允许类。
+
+一个冻结的`CtClass`可以被解冻，以便类定义可以被修改。例如，
+
+```java
+        CtClass cc = ...
+        	:
+        cc.writeFile();
+        cc.defrost();
+        cc.setSuperclass(...); // Ok since the class is not frozen
+```
+
+在`defrost()`方法被调用之后，`CtClass`对象就又可以修改了。
+
+如果`ClassPool.doPruning`被置为`true`，那么当`Javassist`冻结`CtClass`对象时将精简该对象中包含的数据结构。为了减少内存开销，精简会丢弃对象中不必要的属性（`attribute_info`结构）。例如，代码属性结构（方法体）将被丢弃。因此，在`CtClass`对象被精简后，一个方法的字节码是不可访问的，方法名、签名、注解除外。已精简的`CtClass`对象无法再次解冻。`ClassPool.doPruning`的默认值是`false`。
+
+要禁止精简指定的`CtClass`对象，必须提前调用该对象的`stopPruning()`方法。
+
+```java
+        CtClass cc = ...
+        cc.stopPruning(true);
+			:
+        cc.writeFile(); // convert to a class file
+        // cc is not pruned
+```
+
+`CtClass`对象`cc`未被修剪。因此，可以在调用`writeFile()`之后对其进行解冻。
+
+注意：在调试时，您可能希望暂时停止修剪和冻结，并将修改后的类文件写入磁盘。`debugWriteFile()`是一个方便的方法，它关闭精简，写入一个类文件，解冻，然后再次打开精简（如果最初是打开的）。
+
+#### 类搜索路径
+
+静态方法`ClassPool.getDefault()`返回的默认`ClassPool`对象，与底层的`JVM`有相同的搜索路径。如果程序在`JBoss`和`Tomcat`等`web`应用服务器上运行，那么`ClassPool`对象可能无法找到用户类，因为这样的`web`应用服务器使用多个类加载器和系统类加载器。在这种情况下，必须向`ClassPool`对象注册一个附加的类路径。下面的代码假设`pool`引用一个`ClassPool`对象：
+
+```java
+pool.insertClassPath(new ClassClassPath(this.getClass()));
+```
+
+上面的代码注册一个`classpath`，这个`classpath`是`this`引用的对象所在的类的加载路径。你可以使用任意的`Class`类的对象作为参数，而不局限于`this.getClass()`。用于加载表示`Class`对象的类路径就注册好了。
+
+你可以注册一个目录名作为类搜索路径。例如，以下代码将`/usr/local/javalib`添加到搜索路径：
+
+```java
+        ClassPool pool = ClassPool.getDefault();
+        try {
+            ClassPath classPath = pool.insertClassPath("/usr/local/javalib");
+        } catch (NotFoundException e) {
+            e.printStackTrace();
+        }
+```
+
+可以添加的类搜索路径不仅可以是一个目录，也可以是一个`URL`：
+
+```java
+        ClassPool pool = ClassPool.getDefault();
+        ClassPath cp = new URLClassPath("www.javassist.org", 80, "/java/", "org.javassist.");
+        pool.insertClassPath(cp);
+```
+
+上面这个程序添加了`http://www.javassist.org:80/java/`到类搜索路径。这个`URL`用来搜索属性于包`org.javassist.`中的类。例如，要加载一个`org.javassist.test.Main`的类，这个类文件将从以下位置获取：
+
+```java
+http://www.javassist.org:80/java/org/javassist/test/Main.class
+```
+
+此外，你还可以直接提供一个`byte`数组给`ClassPool`对象，并且通过这个`byte`数组构建一个`CtCLass`对象。使用`ByteArrayClassPath`可以做到，例如：
+
+```java
+        ClassPool cp = ClassPool.getDefault();
+        byte[] b = a byte array;
+        String name = class name;
+        cp.insertClassPath(new ByteArrayClassPath(name, b));
+        try {
+            CtClass ctClass = cp.get(name);
+        } catch (NotFoundException e) {
+            e.printStackTrace();
+        }
+```
+
+获得的`CtClass`对象表示由数组`b`指定的类文件定义的类。如果`ClassPool`的`get()`方法被调用了，并且传给`get()`方法的`name`参数为指定的类名，那么`ClassPool`对象将从给定的`ByteArrayClassPath`对象中读取类文件信息。
+
+如果你不知道类的完全限定名，则可以在`ClassPoll`对象上使用`makeClass()`方法：
+
+```java
+        ClassPool cp = ClassPool.getDefault();
+        InputStream ins = an input stream for reading a class file;
+        try {
+            CtClass ctClass = cp.makeClass(ins);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+```
+
+`makeClass()`方法返回的`CtClass`对象，是由给定的`InputStream`输入流构造。你可以使用`makeClass()`方法（急切地）提供一个`class file`对象给`ClassPoll`对象，这可能会对搜索路径中存在一些大的`jar`文件的情况下提升性能。由于`ClassPoll`对象按需读取类文件，因此它可能会反复搜索整个`jar`文件中的每个类文件，`makeClass()`方法可用于优化此搜索。由`makeClass()`方法构造的`CtClass`对象保存在`ClassPool`对象中，并且这个类文件将不会再次读取。
