--- a/docs/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
+++ b/docs/01官方文档阅读系列/09Javassit官方文档/01读写字节码.md
@@ -174,3 +174,5 @@ http://www.javassist.org:80/java/org/javassist/test/Main.class
 ```
 
 `makeClass()`方法返回的`CtClass`对象，是由给定的`InputStream`输入流构造。你可以使用`makeClass()`方法（急切地）提供一个`class file`对象给`ClassPoll`对象，这可能会对搜索路径中存在一些大的`jar`文件的情况下提升性能。由于`ClassPoll`对象按需读取类文件，因此它可能会反复搜索整个`jar`文件中的每个类文件，`makeClass()`方法可用于优化此搜索。由`makeClass()`方法构造的`CtClass`对象保存在`ClassPool`对象中，并且这个类文件将不会再次读取。
+
+用户可以扩展类搜索路径。他们可以定义一个实现`ClassPth`接口的新类，并将该类的实例提供给`ClassPool`实例 的`insertClassPath()`方法。
