--- a/11玩/软路由/01N1盒子.md
+++ b/11玩/软路由/01N1盒子.md
@@ -1,2 +1,9 @@
 ### N1盒子
 
+#### 固件下载
+
+[F大固件](https://www.right.com.cn/forum/forum.php?mod=viewthread&tid=981406&extra=page%3D1%26filter%3Dtypeid%26typeid%3D21)
+
+#### 刷盘工具
+
+[balenaEtcher](https://www.balena.io/etcher/)
