--- a/docs/11玩/软路由/01N1盒子.md
+++ b/docs/11玩/软路由/01N1盒子.md
@@ -4,6 +4,10 @@
 
 [F大固件](https://www.right.com.cn/forum/forum.php?mod=viewthread&tid=981406&extra=page%3D1%26filter%3Dtypeid%26typeid%3D21)
 
+#### 磁盘格式化工具
+
+[DiskGenius](https://www.diskgenius.cn/)
+
 #### 刷盘工具
 
 [balenaEtcher](https://www.balena.io/etcher/)
