--- a/docs/11玩/软路由/01N1盒子.md
+++ b/docs/11玩/软路由/01N1盒子.md
@@ -11,3 +11,33 @@
 #### 刷盘工具
 
 [balenaEtcher](https://www.balena.io/etcher/)
+
+
+
+#### 初始化U盘
+
+操作前备份好数据，注意不要选错盘了。
+
+##### 删除所有分区
+
+![image-20201211233434905](https://raw.githubusercontent.com/huxiaoning/img/master/20201211233436.png)
+
+##### 保存更改
+
+![image-20201211233515855](https://raw.githubusercontent.com/huxiaoning/img/master/20201211233517.png)
+
+保存更改后就可以关闭`DiskGenius`了。
+
+#### 刷写固件到U盘
+
+![image-20201211233628676](https://raw.githubusercontent.com/huxiaoning/img/master/20201211233630.png)
+
+刷写中
+
+![image-20201211233703256](https://raw.githubusercontent.com/huxiaoning/img/master/20201211233704.png)
+
+刷写完成
+
+![image-20201211233732136](https://raw.githubusercontent.com/huxiaoning/img/master/20201211233733.png)
+
+关闭Etcher并拔出U盘备用。
