--- a/docs/11玩/软路由/01N1盒子.md
+++ b/docs/11玩/软路由/01N1盒子.md
@@ -41,3 +41,85 @@
 ![image-20201211233732136](https://raw.githubusercontent.com/huxiaoning/img/master/20201211233733.png)
 
 关闭Etcher并拔出U盘备用。
+
+#### N1降级、开启U盘启动
+
+我N1买来的时候安装的是电视系统，已经不需要降级。
+
+而开启U盘启动，我用的是ADB远程调试开启的。
+
+具体可以去`U2B`搜索视频。这些操作只需要做一次就不记录了。
+
+#### 给N1盒子配置一个静态IP地址
+
+将U盘插在N1盒子上面(最边上的那个USB口)，通电启动`OP`系统。
+
+这一步N1不需要连网。
+
+我主路由(`192.168.1.1`)是一个无线路由器，这个N1做旁路由，静态IP就用`192.168.1.254`好了。
+
+##### 连上N1自带的wifi
+
+![image-20201211235637314](https://raw.githubusercontent.com/huxiaoning/img/master/20201212011222.png)
+
+##### 修改wifi密码
+
+`192.168.1.1/`
+
+![image-20201211235742867](C:\Users\huxia\AppData\Roaming\Typora\typora-user-images\image-20201211235742867.png)
+
+密码:`password`
+
+改wifi密码就自由发挥吧。
+
+网络 -> 无线  然后修改wifi密码
+
+
+
+#### 将U盘中的OP系统写入闪存(EMMC)中
+
+系统 -> TTY终端
+
+用户名`root`密码`password`
+
+```shell
+$ ls
+inst-to-emmc.sh update-to-emmc.sh
+$ ./inst-to-emmc.sh
+```
+
+命令执行过程中会问你`yes or no?`输入一个`y`即可。
+
+#### 设置旁路由
+
+![image-20201212004859507](https://raw.githubusercontent.com/huxiaoning/img/master/20201212005111.png)
+
+关闭DHCP
+
+![image-20201212004924860](https://raw.githubusercontent.com/huxiaoning/img/master/20201212005058.png)
+
+关闭IPV6
+
+![image-20201212005046691](https://raw.githubusercontent.com/huxiaoning/img/master/20201212005047.png)
+
+SmartDNS
+
+![image-20201212005917908](https://raw.githubusercontent.com/huxiaoning/img/master/20201212011203.png)
+
+添加DNS(还是上面那个页面，滑到最下面)
+
+![image-20201212010244555](https://raw.githubusercontent.com/huxiaoning/img/master/20201212011155.png)
+
+这个页面的最下面保存并应用
+
+修改两个us的服务器组
+
+![image-20201212010438022](https://raw.githubusercontent.com/huxiaoning/img/master/20201212011140.png)
+
+![image-20201212010539444](https://raw.githubusercontent.com/huxiaoning/img/master/20201212010540.png)
+
+
+
+设置第二DNS服务器
+
+![image-20201212010930115](https://raw.githubusercontent.com/huxiaoning/img/master/20201212010931.png)
