--- a/docs/11玩/软路由/01N1盒子.md
+++ b/docs/11玩/软路由/01N1盒子.md
@@ -123,3 +123,7 @@ SmartDNS
 设置第二DNS服务器
 
 ![image-20201212010930115](https://raw.githubusercontent.com/huxiaoning/img/master/20201212010931.png)
+
+正确上网姿势里面选择如下：
+
+![image-20201212013256434](https://raw.githubusercontent.com/huxiaoning/img/master/20201212013258.png)
